Implement hotel and content hotel endpoints